--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ astor==0.8.0
 astroid==2.2.5
 billiard==3.6.1.0
 celery==4.3.0
+certifi==2020.4.5.1
 Click==7.0
+colorama==0.4.3
 cycler==0.10.0
 dominate==2.4.0
 Flask==1.1.1
@@ -38,8 +40,10 @@ python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==5.1.1
 redis==3.3.11
+SALib==1.3.11
 scikit-learn==0.21.2
 scipy==1.3.0
+seaborn==0.10.1
 six==1.12.0
 tensorboard==1.14.0
 tensorflow==1.14.0
@@ -51,5 +55,6 @@ typed-ast==1.4.0
 vine==1.3.0
 visitor==0.1.3
 Werkzeug==0.15.4
+wincertstore==0.2
 wrapt==1.11.2
 zipp==0.6.0
