--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ astor==0.8.0
 astroid==2.2.5
 billiard==3.6.1.0
 celery==4.3.0
-certifi==2020.4.5.1
+certifi==2021.5.30
 Click==7.0
 colorama==0.4.3
 cycler==0.10.0
@@ -19,7 +19,7 @@ importlib-metadata==1.3.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
-joblib==0.13.2
+joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
 Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
@@ -30,8 +30,11 @@ Markdown==3.1.1
 MarkupSafe==1.1.1
 matplotlib==3.1.1
 mccabe==0.6.1
+mkl-fft==1.3.0
+mkl-random==1.1.1
+mkl-service==2.3.0
 more-itertools==8.0.2
-numpy==1.16.4
+numpy @ file:///C:/ci/numpy_and_numpy_base_1603480701039/work
 pandas==0.24.2
 protobuf==3.8.0
 pylint==2.3.1
@@ -41,15 +44,16 @@ pytz==2019.1
 PyYAML==5.1.1
 redis==3.3.11
 SALib==1.3.11
-scikit-learn==0.21.2
-scipy==1.3.0
+scikit-learn @ file:///C:/ci/scikit-learn_1622739439730/work
+scipy==1.5.4
 seaborn==0.10.1
-six==1.12.0
+six @ file:///tmp/build/80754af9/six_1644875935023/work
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
 Theano==1.0.4
+threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
 tqdm==4.36.1
 typed-ast==1.4.0
 vine==1.3.0
